--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
+# Core dependencies for OUR and REVISIT models
 torch>=2.0.0
 numpy>=1.24.0
+
+# Evaluation and metrics
 scikit-learn>=1.3.0
-matplotlib>=3.7.0
-transformers>=4.30.0
-tqdm>=4.65.0
 scipy>=1.10.0
