--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ numpy>=1.24.0
 # Evaluation and metrics
 scikit-learn>=1.3.0
 scipy>=1.10.0
+
+# Weights & Biases for experiment tracking and hyperparameter sweeps
+wandb>=0.16.0
+pyyaml>=6.0
