--- a/sweeps/revisit_sweep.yaml
+++ b/sweeps/revisit_sweep.yaml
@@ -1,6 +1,5 @@
 program: src/REVISIT.py
-method: grid  # Options: grid, random, bayes (random recommended for large search spaces)
-run_cap: 5  # Maximum number of runs for this sweep (optional, remove for unlimited)
+method: random  # Options: grid, random, bayes (random recommended for large search spaces)
 metric:
   name: eval/f1_at_0.5
   goal: maximize
@@ -13,10 +12,12 @@ parameters:
     values: [2, 3, 4]
   
   dim:
-    values: [256]
+    values: [128, 256, 512]
   
   lr:
-    values: [0.00001, 0.0001, 0.001, 0.01]  
+    distribution: log_uniform_values
+    min: 0.00001
+    max: 0.01
   
   epoch:
     values: [10, 20, 30, 40, 50]
@@ -25,10 +26,10 @@ parameters:
     values: [32, 64, 128]  # 0 means full dataset
   
   neg_sample_per_pos:
-    values: [100, 500, 1000]
+    values: [100, 500, 1000, 2000]
   
   loss_name:
-    values: ["bern"]
+    values: ["bern", "poisson", "hinge"]
   
   max_read_num:
     values: [100, 200, 300, 400, 500]  # 0 means all
@@ -37,7 +38,7 @@ parameters:
     value: 26042024
   
   device:
-    value: cuda
+    value: cpu
   
   workers_num:
     value: 1
@@ -58,8 +59,8 @@ parameters:
     value: .  # Path to evaluation data directory (contains reference/, marine/, plant/ subdirectories)
   
   eval_species:
-    value: reference  # Comma-separated list of species to evaluate (will auto-detect if not specified)
+    value: reference,marine,plant  # Comma-separated list of species to evaluate (will auto-detect if not specified)
   
   eval_sample:
-    value: 5  # Comma-separated list of sample IDs for evaluation
+    value: 5,6  # Comma-separated list of sample IDs for evaluation
 
